print request param

--- a/Web Development w Google`s go/net http package/index.html
+++ b/Web Development w Google`s go/net http package/index.html
@@ -6,15 +6,15 @@
 </head>
 <body>
 
-
-{{if .}}
-<main>
-    <p><strong>variable names</strong> (identifiers) and <em>values</em>:</p>
-    {{range $key, $value := .}}
-    <p><strong>{{$key}}</strong></p>
-    <ul>{{range $value}}<li><em>{{.}}</em></li>{{end}}</ul>
+{{ if .Header }}
+{{range $k, $v := .Header}}
+<p>{{$k}}</p>
+<ul>
+    {{range $v}}
+    <li>{{.}}</li>
     {{end}}
-</main>
+</ul>
+{{end}}
 {{end}}
 
 
